--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-<<<<<<< HEAD
 body {
   background-color:lightblue;
-=======
+}
+
 h1 {
   color: blue;
->>>>>>> 8509fe576ae5c3a058de81df8bc48fc07244114e
 }
